JETcompiler/Tests/bad/bad022.myout
Cannot initiate field "x" of type "IntegerType" with incompatible type "FloatType", line 4
